<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.haim.mivtzaimprojv4.ProfileActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/profile_user_textview"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/etLastName"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/etFirstName"
        app:layout_constraintRight_toLeftOf="@+id/etFirstName"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:inputType="phone"
        android:hint="@string/phone"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        app:layout_constraintLeft_toLeftOf="@+id/etLastName"
        app:layout_constraintRight_toRightOf="@+id/etFirstName"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/etSearchAddressProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/profile_address"
        android:inputType="textPostalAddress"
        app:layout_constraintLeft_toLeftOf="@+id/etPhone"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        android:layout_marginRight="4dp"
        app:layout_constraintRight_toRightOf="@+id/etPhone"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="בחר שעה ותאריך ליציאה קבועה"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/etSearchAddressProfile"
        app:layout_constraintRight_toRightOf="@+id/etSearchAddressProfile"
        app:layout_constraintLeft_toLeftOf="@+id/etSearchAddressProfile"
        app:layout_constraintHorizontal_bias="0.0" />

    <Spinner
        android:id="@+id/daySpinner"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:spinnerMode="dropdown"

        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/minuteSpiner"
        android:layout_marginLeft="0dp" />

    <Spinner
        android:id="@+id/hourSpiner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:spinnerMode="dropdown"
        android:gravity="center"
        app:layout_constraintRight_toLeftOf="@+id/textView4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="@+id/minuteSpiner" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@+id/minuteSpiner"
        app:layout_constraintRight_toLeftOf="@+id/minuteSpiner"
        app:layout_constraintLeft_toRightOf="@+id/hourSpiner"
        app:layout_constraintBottom_toBottomOf="@+id/hourSpiner"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginTop="0dp" />

    <Spinner
        android:id="@+id/minuteSpiner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:spinnerMode="dropdown"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/daySpinner"
        app:layout_constraintBottom_toBottomOf="@+id/daySpinner"
        app:layout_constraintRight_toLeftOf="@+id/daySpinner"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="שמירה"
        app:layout_constraintTop_toBottomOf="@+id/hourSpiner"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
